@@ -36,374 +36,93 @@
   <module name="bonobo-config">
     <version name="bonobo-config-HEAD" id="HEAD" path="bonobo-config" server="CVS-GNOME" />
   </module>
-<!--  <module name="bug-buddy">
-    <version release="gnome-2.4">
-      <component name="bug-buddy" dir="bug-buddy" group="desktop">
-        <podir dir="po"/>
-        <potname name="bug-buddy.pot"/>
-        <branch name="gnome-2-4"/>
-        <regenerate/>
-        <download/>
-      </component>
-    </version>
-    <version release="gnome-2.6">
-      <component name="bug-buddy" dir="bug-buddy" group="desktop">
-        <podir dir="po"/>
-        <potname name="bug-buddy.pot"/>
-        <branch name="HEAD"/>
-        <regenerate/>
-        <download/>
-      </component>
-    </version>
+  <module name="bug-buddy">
+    <version name="bug-buddy-gnome-2-4" id="gnome-2-4" path="bug-buddy" server="CVS-GNOME" />
+    <version name="bug-buddy-HEAD" id="HEAD" path="bug-buddy" server="CVS-GNOME" />
   </module>
   <module name="camorama">
-    <version release="gnome-2.6">
-      <component name="camorama" dir="camorama" group="fifth-toe">
-       <podir dir="po"/>
-       <potname name="camorama.pot"/>
-       <branch name="HEAD"/>
-       <regenerate/>
-       <download/>
-      </component>
-    </version>
+    <version name="camorama-HEAD" id="HEAD" path="camorama" server="CVS-GNOME" />
   </module>
   <module name="conglomerate">
-    <version release="gnome-2.6">
-      <component name="conglomerate" dir="conglomerate" group="extras">
-       <podir dir="po"/>
-       <potname name="conglomerate.pot"/>
-       <branch name="HEAD"/>
-       <regenerate/>
-       <download/>
-      </component>
-    </version>
+    <version name="conglomerate-HEAD" id="HEAD" path="conglomerate" server="CVS-GNOME" />
   </module>
   <module name="devhelp">
-    <version release="gnome-2.6">
-      <component name="devhelp" dir="devhelp" group="extras">
-	<podir dir="po"/>
-	<potname name="devhelp.pot"/>
-	<branch name="HEAD"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
+    <version name="devhelp-HEAD" id="HEAD" path="devhelp" server="CVS-GNOME" />
   </module>
   <module name="dia">
-    <version release="gnome-2.6">
-      <component name="dia" dir="dia" group="office">
-        <podir dir="po"/>
-        <potname name="dia.pot"/>
-        <branch name="HEAD"/>
-        <regenerate/>
-        <download/>
-      </component>
-    </version>
+    <version name="dia-HEAD" id="HEAD" path="dia" server="CVS-GNOME" />
   </module>
   <module name="drgeo">
-    <version release="gnome-2.6">
-      <component name="drgeo" dir="drgeo" group="extras">
-	<podir dir="po"/>
-	<potname name="drgeo.pot"/>
-	<branch name="HEAD"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
+    <version name="drgeo-HEAD" id="HEAD" path="drgeo" server="CVS-GNOME" />
   </module>
   <module name="drwright">
-    <version release="gnome-2.6">
-      <component name="drwright" dir="drwright" group="extras">
-	<podir dir="po"/>
-	<potname name="drwright.pot"/>
-	<branch name="HEAD"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
+    <version name="drwright-HEAD" id="HEAD" path="drwright" server="CVS-GNOME" />
   </module>
   <module name="eel">
-    <version release="gnome-2.4">
-      <component name="eel" dir="eel" group="desktop">
-        <podir dir="po"/>
-        <potname name="eel-2.0.pot"/>
-        <branch name="gnome-2-4"/>
-        <regenerate/>
-        <download/>
-      </component>
-    </version>
-    <version release="gnome-2.6">
-      <component name="eel" dir="eel" group="desktop">
-        <podir dir="po"/>
-        <potname name="eel-2.0.pot"/>
-        <branch name="HEAD"/>
-        <regenerate/>
-        <download/>
-      </component>
-    </version>
+    <version name="eel-gnome-2-4" id="gnome-2-4" path="eel" server="CVS-GNOME" />
+    <version name="eel-HEAD" id="HEAD" path="eel" server="CVS-GNOME" />
   </module>
   <module name="eog">
-    <version release="gnome-2.4">
-      <component name="eog" dir="eog" group="desktop">
-        <podir dir="po"/>
-        <potname name="eog.pot"/>
-        <branch name="gnome-2-4"/>
-        <regenerate/>
-        <download/>
-      </component>
-    </version>
-    <version release="gnome-2.6">
-      <component name="eog" dir="eog" group="desktop">
-        <podir dir="po"/>
-        <potname name="eog.pot"/>
-        <branch name="HEAD"/>
-        <regenerate/>
-        <download/>
-      </component>
-    </version>
+    <version name="eog-gnome-2-4" id="gnome-2-4" path="eog" server="CVS-GNOME" />
+    <version name="eog-HEAD" id="HEAD" path="eog" server="CVS-GNOME" />
   </module>
   <module name="epiphany">
-    <version release="gnome-2.4">
-      <component name="epiphany" dir="epiphany" group="desktop">
-	<podir dir="po"/>
-	<potname name="epiphany.pot"/>
-	<branch name="gnome-2-4"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
-    <version release="gnome-2.6">
-      <component name="epiphany" dir="epiphany" group="desktop">
-	<podir dir="po"/>
-	<potname name="epiphany.pot"/>
-	<branch name="HEAD"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
+    <version name="epiphany-gnome-2-4" id="gnome-2-4" path="epiphany" server="CVS-GNOME" />
+    <version name="epiphany-HEAD" id="HEAD" path="epiphany" server="CVS-GNOME" />
   </module>
   <module name="evolution">
-    <version release="gnome-2.6">
-      <component name="evolution" dir="evolution" group="extras">
-	<podir dir="po"/>
-	<potname name="evolution-1.4.pot"/>
-	<branch name="evolution-1-4-branch"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
+    <version name="evolution-1-4-branch" id="evolution-1-4-branch" path="evolution" server="CVS-GNOME" />
   </module>
   <module name="evolution-groupwise">
-    <version release="gnome-2.6">
-      <component name="evolution-groupwise" dir="evolution-groupwise" group="extras">
-	<podir dir="po"/>
-	<potname name="evolution-groupwise-1.0.pot"/>
-	<branch name="HEAD"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
+    <version name="evolution-groupwise-HEAD" id="HEAD" path="evolution-groupwise" server="CVS-GNOME" />
   </module>
   <module name="file-roller">
-    <version release="gnome-2.4">
-      <component name="file-roller" dir="file-roller" group="desktop">
-	<podir dir="po"/>
-	<potname name="file-roller.pot"/>
-	<branch name="HEAD"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
-    <version release="gnome-2.6">
-      <component name="file-roller" dir="file-roller" group="desktop">
-	<podir dir="po"/>
-	<potname name="file-roller.pot"/>
-	<branch name="HEAD"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
+    <version name="file-roller-HEAD" id="HEAD" path="file-roller" server="CVS-GNOME" />
   </module>
   <module name="firestarter">
-    <version release="gnome-2.6">
-      <component name="firestarter" dir="firestarter" group="extras">
-        <podir dir="po/"/>
-        <potname name="firestarter.pot"/>
-        <branch name="HEAD"/>
-        <regenerate/>
-        <download/>
-      </component>
-    </version>
+    <version name="firestarter-HEAD" id="HEAD" path="firestarter" server="CVS-GNOME" />
   </module>
   <module name="gaby">
-    <version release="gnome-2.6">
-      <component name="gaby" dir="gaby" group="extras">
-	<podir dir="po"/>
-	<potname name="gaby.pot"/>
-	<branch name="HEAD"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
+    <version name="gaby-HEAD" id="HEAD" path="gaby" server="CVS-GNOME" />
   </module>
   <module name="gal">
-    <version release="gnome-2.6">
-      <component name="gal" dir="gal" group="extras">
-	<podir dir="po"/>
-	<potname name="gal-1.99.10.99.pot"/>
-	<branch name="evolution-1-4-branch"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
+    <version name="gal-evolution-1-4-branch" id="evolution-1-4-branch" path="gal" server="CVS-GNOME" />
   </module>
   <module name="galeon">
-    <version release="gnome-2.6">
-      <component name="galeon" dir="galeon" group="fifth-toe">
-	<podir dir="po"/>
-	<potname name="galeon-2.0.pot"/>
-	<branch name="HEAD"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
+    <version name="galeon-HEAD" id="HEAD" path="galeon" server="CVS-GNOME" />
   </module>
   <module name="gcalctool">
-    <version release="gnome-2.4">
-      <component name="gcalctool" dir="gcalctool" group="desktop">
-	<podir dir="po"/>
-	<potname name="gcalctool.pot"/>
-	<branch name="gnome-2-4"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
-    <version release="gnome-2.6">
-      <component name="gcalctool" dir="gcalctool" group="desktop">
-	<podir dir="po"/>
-	<potname name="gcalctool.pot"/>
-	<branch name="HEAD"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
+    <version name="gcalctool-gnome-2-4" id="gnome-2-4" path="gcalctool" server="CVS-GNOME" />
+    <version name="gcalctool-HEAD" id="HEAD" path="gcalctool" server="CVS-GNOME" />
   </module>
-  <module name="gcm">
-    <version release="gnome-2.6">
-      <component name="gcm" dir="gcm" group="fifth-toe">
-	<podir dir="po"/>
-	<potname name="gcm.pot"/>
-	<branch name="HEAD"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
+  <module name="gcm"><!-- AQUI -->
+    <version name="gcm-HEAD" id="HEAD" path="gcm" server="CVS-GNOME" />
   </module>
   <module name="gcompris">
-    <version release="gnome-2.6">
-      <component name="gcompris" dir="gcompris" group="fifth-toe">
-	<podir dir="po"/>
-	<potname name="gcompris.pot"/>
-	<branch name="HEAD"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
+    <version name="gcompris-HEAD" id="HEAD" path="gcompris" server="CVS-GNOME" />
   </module>
   <module name="gconf">
-    <version release="gnome-2.4">
-      <component name="gconf" dir="gconf" group="developer-libs">
-        <podir dir="po"/>
-        <potname name="GConf2.pot"/>
-        <branch name="gnome-2-4"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
-    <version release="gnome-2.6">
-      <component name="gconf" dir="gconf" group="developer-libs">
-        <podir dir="po"/>
-        <potname name="GConf2.pot"/>
-        <branch name="HEAD"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
+    <version name="gconf-gnome-2-4" id="gnome-2-4" path="gconf" server="CVS-GNOME" />
+    <version name="gconf-HEAD" id="HEAD" path="gconf" server="CVS-GNOME" />
   </module>
   <module name="gconf-editor">
-    <version release="gnome-2.4">
-      <component name="gconf-editor" dir="gconf-editor" group="desktop">
-        <podir dir="po"/>
-        <potname name="gconf-editor.pot"/>
-        <branch name="gnome-2-4"/>
-        <regenerate/>
-        <download/>
-      </component>
-    </version>
-    <version release="gnome-2.6">
-      <component name="gconf-editor" dir="gconf-editor" group="desktop">
-        <podir dir="po"/>
-        <potname name="gconf-editor.pot"/>
-        <branch name="HEAD"/>
-        <regenerate/>
-        <download/>
-      </component>
-    </version>
+    <version name="gconf-editor-gnome-2-4" id="gnome-2-4" path="gconf-editor" server="CVS-GNOME" />
+    <version name="gconf-editor-HEAD" id="HEAD" path="gconf-editor" server="CVS-GNOME" />
   </module>
   <module name="gdesklets">
-    <version release="gnome-2.6">
-      <component name="gdesklets" dir="gdesklets" group="extras">
-	<podir dir="po"/>
-	<potname name="gdesklets.pot"/>
-	<branch name="HEAD"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
+    <version name="gdesklets-HEAD" id="HEAD" path="gdesklets" server="CVS-GNOME" />
   </module>
   <module name="gdesklets-extras">
-    <version release="gnome-2.6">
-      <component name="gdesklets-extras" dir="gdesklets-extras" group="extras">
-	<podir dir="po"/>
-	<potname name="gdesklets.pot"/>
-	<branch name="HEAD"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
+    <version name="gdesklets-extras-HEAD" id="HEAD" path="gdesklets-extras" server="CVS-GNOME" />
   </module>
   <module name="gdl">
-    <version release="gnome-2.6">
-      <component name="gdl" dir="gdl" group="developer-app">
-	<podir dir="po"/>
-	<potname name="gdl-1.pot"/>
-	<branch name="HEAD"/>
-	<regenerate/>
-	<download/>
-      </component>
-    </version>
+    <version name="gdl-HEAD" id="HEAD" path="gdl" server="CVS-GNOME" />
   </module>
   <module name="gdm2">
-    <version release="gnome-2.4">
-      <component name="gdm2" dir="gdm2" group="desktop">
-        <podir dir="po"/>
-        <potname name="gdm-2.4.pot"/>
-        <branch name="gnome-2-4"/>
-        <regenerate/>
-        <download/>
-      </component>
-    </version>
-    <version release="gnome-2.6">
-      <component name="gdm2" dir="gdm2" group="desktop">
-        <podir dir="po"/>
-        <potname name="gdm-2.4.pot"/>
-        <branch name="HEAD"/>
-        <regenerate/>
-        <download/>
-      </component>
-    </version>
+    <version name="gdm2-gnome-2-4" id="gnome-2-4" path="gdm2" server="CVS-GNOME" />
+    <version name="gdm2-gnome-2-6" id="HEAD" path="gdm2" server="CVS-GNOME" />
   </module>
-  <module name="gedit">
+<!--  <module name="gedit">
     <version release="gnome-2.4">
       <component name="gedit" dir="gedit" group="desktop">
         <podir dir="po"/>
@@ -2162,6 +1881,12 @@
   <view name="gnome-2.4">
     <group name="GNOME 2.4 Desktop" >
       <versionrefs name="acme-gnome-2-4" />
+      <versionrefs name="bug-buddy-gnome-2-4" />
+      <versionrefs name="eel-gnome-2-4" />
+      <versionrefs name="eog-gnome-2-4" />
+      <versionrefs name="epiphany-gnome-2-4" />
+      <versionrefs name="file-roller-HEAD" />
+      <versionrefs name="gcalctool-gnome-2-4" />
     </group>
     <group name="GNOME 2.4 Developer Libs" >
       <versionrefs name="atk-HEAD" />
@@ -2171,6 +1896,12 @@
   <view name="gnome-2.6">
     <group name="GNOME 2.6 Desktop" >
       <versionrefs name="acme-HEAD" />
+      <versionrefs name="bug-buddy-HEAD" />
+      <versionrefs name="eel-HEAD" />
+      <versionrefs name="eog-HEAD" />
+      <versionrefs name="epiphany-HEAD" />
+      <versionrefs name="file-roller-HEAD" />
+      <versionrefs name="gcalctool-HEAD" />
     </group>
     <group name="GNOME 2.6 Developer Libs" >
       <versionrefs name="atk-HEAD" />
@@ -2178,11 +1909,14 @@
     </group>
     <group name="GNOME 2.6 Fifth Toe" >
       <versionrefs name="balsa-2-0" />
+      <versionrefs name="camorama-HEAD" />
+      <versionrefs name="galeon-HEAD" />
     </group>
     <group name="GNOME 2.6 Developer App" >
       <versionrefs name="anjuta-1-2-0" />
     </group>
     <group name="GNOME 2.6 Office" >
+      <versionrefs name="dia-HEAD" />
     </group>
     <group name="GNOME 2.6 Extras" >
       <versionrefs name="alleyoop-HEAD" />
@@ -2190,6 +1924,15 @@
       <versionrefs name="battfink-HEAD" />
       <versionrefs name="beast-HEAD" />
       <versionrefs name="bonobo-config-HEAD" />
+      <versionrefs name="conglomerate-HEAD" />
+      <versionrefs name="devhelp-HEAD" />
+      <versionrefs name="drgeo-HEAD" />
+      <versionrefs name="drwright-HEAD" />
+      <versionrefs name="evolution-1-4-branch" />
+      <versionrefs name="evolution-groupwise-HEAD" />
+      <versionrefs name="firestarter-HEAD" />
+      <versionrefs name="gaby-HEAD" />
+      <versionrefs name="gal-evolution-1-4-branch" />
     </group>
   </view>
 
