@@ -1,5 +1,9 @@
 2003-10-20  Carlos Perelló Marín <carlos@gnome.org>
 
+	* status-gnome.xml: More migration taks. This work is booooring!!!
+
+2003-10-20  Carlos Perelló Marín <carlos@gnome.org>
+
 	* status-gnome.xml, translation-status.xml: libgtop has been branched.
 	Please, update both .xml files until we get new status pages online.
 
